Modify HTML structure and add QR code script
Updated the connection status message and added a QR code generator script.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="mensaje" class="mensaje"></div>
         
         <div class="estado-conexion">
-            <div id="estado" class="estado-desconectado">⏸️ Recepción pausada</div>
+            <div id="estado" class="estado-desconectado">⏸️ Recepción inactiva</div>
         </div>
         
         <div class="info">
@@ -34,6 +34,7 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/qrcode-generator@1.4.4/qrcode.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
