--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         <div class="input-section">
             <input type="text" id="palabraInput" placeholder="Escribe tu idea aquí..." maxlength="20">
-            <button onclick="enviarPalabra()" id="btnEnviar">Enviar Idea ✨</button>
+            <button onclick="enviarPalabra()" id="btnEnviar" class="btn-enviar-grande">Enviar Idea ✨</button>
         </div>
         
         <div id="mensaje" class="mensaje"></div>
