Revise presentador.html structure and content
Updated the HTML structure and content for the presenter control panel.

--- a/presentador.html
+++ b/presentador.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Control del Presentador - Lluvia de Ideas</title>
+    <title>Lluvia de Ideas</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="presentador-body">
@@ -60,12 +60,12 @@
                     </div>
                 </div>
 
-                <!-- Base de Datos -->
-                <div class="configuracion">
+                <!-- Base de Datos - OCULTA PERO FUNCIONAL -->
+                <div class="configuracion" style="display: none;">
                     <h4>🔧 Base de Datos Firebase</h4>
                     <div class="info-gist">
                         <p><small>💡 <strong>Base de datos en tiempo real activa</strong></small></p>
-                        <p><small>🔗 <strong>Estado:</strong> <span id="estadoConexion">Conectando...</span></small></p>
+                        <p><small>🔗 <strong>Estado:</strong> <span id="estadoConexion">Conectado</span></small></p>
                     </div>
                 </div>
             </div>
