Fix HTML formatting and structure

--- a/presentador.html
+++ b/presentador.html
@@ -97,7 +97,7 @@
             
             <!-- Área para formar enunciado -->
             <div class="area-enunciado-container">
-                <h3>💡 Forma tu enunciado</h3>
+                <h3>Forma tu enunciado</h3>
                 <div id="areaEnunciado" class="area-enunciado">
                     <div class="enunciado-guia">
                         Arrastra las palabras aquí para formar un enunciado
